[api、swagger] modify filter conditions
