# src/controllers/todos/index.ts
@@ -7,29 +7,24 @@ const getTodos = async (req: Request, res: Response): Promise<void> => {
     let priority = req.query.priority || 1
     const reg = new RegExp(keyword.toString(), 'i')
 
-    let query: {};
-    if (req.query.status || req.query.priority) {
-        query = {
-            "$and": [
-                {
-                    "$or": [
-                        {name: {$regex: reg}},
-                        {description: {$regex: reg}}
-                    ]
-                },
-                {status: req.query.status},
-                {priority: req.query.priority}
-            ]
-        };
-    } else {
-        query = {
-            "$or": [
-                {name: {$regex: reg}},
-                {description: {$regex: reg}}
-            ]
-        }
+    let query: any;
+    query = {
+        $and: [
+            {
+                $or: [
+                    {name: {$regex: reg}},
+                    {description: {$regex: reg}}
+                ]
+            }
+        ]
+    };
+    if (req.query.status) {
+        query['$and'].push({status: req.query.status});
     }
-
+    if (req.query.priority) {
+        query['$and'].push({priority: priority});
+    }
+    
     try {
         let todos: ITodo[]
         todos = await Todo.find(
